--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@rails/activestorage": "^7.1.3",
+    "@rails/ujs": "^7.1.3",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "4.5.3",
+    "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
+    "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
