--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,7 @@ production:
   database: <%= Rails.application.credentials.planetscale&.fetch(:database) %>
   host: <%= Rails.application.credentials.planetscale&.fetch(:host) %>
   ssl_mode: verify_identity
+  sslca: "/etc/ssl/certs/ca-certificates.crt"
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
