--- a/config/database.yml
+++ b/config/database.yml
@@ -1,36 +1,21 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  default: &default
+    adapter: mysql2
+    encoding: utf8mb4
+    pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+    username: root
+    port: 3306
 
-development:
-  <<: *default
-  database: db/development.sqlite3
+  development:
+    <<: *default
+    host: db
+    database: myapp_development
+    password:
 
-production:
-  <<: *default
+  production:
+   <<: *default
   username: <%= Rails.application.credentials.planetscale&.fetch(:username) %>
   password: <%= Rails.application.credentials.planetscale&.fetch(:password) %>
   database: <%= Rails.application.credentials.planetscale&.fetch(:database) %>
   host: <%= Rails.application.credentials.planetscale&.fetch(:host) %>
   ssl_mode: verify_identity
   sslca: "/etc/ssl/certs/ca-certificates.crt"
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
