--- a/config/database.yml
+++ b/config/database.yml
@@ -1,18 +1,18 @@
-  default: &default
-    adapter: mysql2
-    encoding: utf8mb4
-    pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-    username: root
-    port: 3306
+default: &default
+  adapter: mysql2
+  encoding: utf8mb4
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-  development:
-    <<: *default
-    host: db
-    database: myapp_development
-    password:
+development:
+  <<: *default
+  database: db/development.sqlite3
 
-  production:
-   <<: *default
+test:
+  <<: *default
+  database: db/test.sqlite3
+
+production:
+  <<: *default
   username: <%= Rails.application.credentials.planetscale&.fetch(:username) %>
   password: <%= Rails.application.credentials.planetscale&.fetch(:password) %>
   database: <%= Rails.application.credentials.planetscale&.fetch(:database) %>
