--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,9 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  host: db
+  database: myapp_development
+  password:
 
 test:
   <<: *default
