--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
-    "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4",
     "license": "UNLICENSED"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "webpack-dev-server": "^3"
+    "webpack-dev-server": "^3",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4"
   }
 }
