--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "jquery": "^3.7.1",
     "license": "UNLICENSED",
     "popper.js": "^1.16.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
