--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "webpack-dev-server": "^3",
-    "license": "UNLICENSED"
+    "webpack-dev-server": "^3"
   }
 }
