--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@popperjs/core": "^2.11.8",
     "@rails/activestorage": "^7.1.3",
     "@rails/ujs": "^7.1.3",
     "@rails/webpacker": "5.4.3",
@@ -18,4 +19,3 @@
     "webpack-dev-server": "^3"
   }
 }
-
