--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "4.5.3",
     "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
+    "jquery-ui": "^1.13.2",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
